--- a/students/savchak_marharyta/exam_1/src/css/header/_header.scss
+++ b/students/savchak_marharyta/exam_1/src/css/header/_header.scss
@@ -37,6 +37,9 @@
         @include media(sm) {
             flex-direction: column;
             align-items: center;
+            padding-bottom: 0;
+            padding-left: 0;
+            padding-right: 0;
         }
 
         @include media(xs) {
@@ -60,6 +63,7 @@
 
     @include media(sm) {
         display: block;
+        position: relative;
 
     }
 
@@ -103,12 +107,12 @@
         }
 
         @include media(xs) {
-            font-size: 11px;
+            font-size: 12px;
         }
 
-        @include media(xxs) {
-            font-size: 8px;
-        }
+        // @include media(xxs) {
+        //     font-size: 8px;
+        // }
 
     }
 
@@ -116,7 +120,6 @@
         position: relative;
 
         @include media(sm) {
-            border-bottom: 1px solid $dark-gray;
             padding: 20px 0;
             text-align: center;
         }
@@ -131,10 +134,6 @@
 
         }
     }
-}
-
-.menu-open-input {
-    @include visuality-hidden;
 }
 
 .menu-open-input {
@@ -166,14 +165,4 @@
 
 
     }
-}
-
-.header__menu_item:visited {
-    @include media(sm) {
-
-        .header__menu-wrapper {
-            display: none;
-        }
-    }
-
 }
