--- a/students/kukuruza_maxim/exam-1/src/css/header/_header.scss
+++ b/students/kukuruza_maxim/exam-1/src/css/header/_header.scss
@@ -51,7 +51,6 @@
     background: #fff;
     display: flex;
     justify-content: space-between;
-    padding: 5px;
 
     @include media(md) {
         width: 350px;
@@ -64,6 +63,14 @@
 
     @include media(xxxs) {
         width: fit-content;
+    }
+
+    .input-wrapper {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        background: $white-color;
+        padding: 5px;
     }
 
     &-btn {
@@ -81,7 +88,8 @@
         border: none;
         width: 100%;
         height: 60px;
-        box-sizing: border-box !important;
+        box-sizing: border-box;
+
 
     }
 
@@ -91,16 +99,17 @@
         letter-spacing: 2.8px;
 
         @include media(md) {
-            font-size: 13px;
+            letter-spacing: 1px;
+            font-size: 16px;
         }
 
         @include media (xxs) {
-            letter-spacing: 1.4px;
-            font-size: 12px;
+            letter-spacing: 0px;
+            font-size: 14px;
         }
 
         @include media (xxxs) {
-            letter-spacing: 1.4px;
+            letter-spacing: 0px;
             font-size: 10px;
         }
 
