--- a/students/kukuruza_maxim/exam-2/src/css/header/_header.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/header/_header.scss
@@ -22,6 +22,13 @@
     }
 }
 
+.logo {
+    &:hover {
+        transform: scale(1.05)
+    }
+
+    transition: all .3s;
+}
 
 .menu {
     display: flex;
@@ -30,7 +37,20 @@
     text-transform: uppercase;
     font-size: 14px;
 
+    @include media(md) {
+        width: 992px;
+
+    }
+
     &__item {
+
+        &:hover {
+
+            &::before {
+                background: #fff;
+            }
+        }
+
         &::before {
             content: "";
             display: block;
@@ -39,8 +59,10 @@
             width: 9px;
             height: 9px;
             position: absolute;
-            margin-left: -15px;
+            margin-left: -25px;
             top: 45%;
+            background: transparent;
+            transition: all .3s;
 
             @include media(sm) {
                 width: 10px;
@@ -53,6 +75,7 @@
     &__link {
         color: $white-color;
         text-decoration: none;
+
     }
 
     &__social {
@@ -61,6 +84,12 @@
         gap: 20px;
 
         &-item {
+            &:hover {
+                transform: scale(1.15)
+            }
+
+            transition: all .3s;
+
             @extend .menu;
         }
     }
