--- a/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
@@ -1,5 +1,5 @@
 .why-choose-us {
-    background-image: url("../../images/why_choose_us-bg.jpeg");
+    background-image: url('../../images/why_choose_us-bg.jpeg');
     @extend %background-positioning;
     // .why-choose-us__title
 
