Revert "last changes"
This reverts commit c8d32c34dde1e4fb68e12b78e9f0360fbe6e4cf9.

--- a/students/rybalka_illia/exam_01/src/css/main/_travel-block.scss
+++ b/students/rybalka_illia/exam_01/src/css/main/_travel-block.scss
@@ -3,34 +3,29 @@
     // .travel_textblock
 
     &__textblock {
-        background: rgba(35, 35, 35, 0.90);
         width: 50%;
-        padding: 30px;
-        margin-top: 220px;
-        margin-right: 50%;
-
+        background: rgba(35, 35, 35, 0.90);
+        margin-top: 240px;
+        margin-left: 120px;
+        padding: 20px;
         box-sizing: border-box;
-        margin-bottom: 120px;
 
         @include media(md) {
             text-align: center;
             margin-left: 25%;
-            margin-top: 10%;
-            margin-bottom: 10%;
+            margin-top: 14%;
         }
 
         @include media(sm) {
             width: 70%;
             margin: 0 auto;
-            margin-top: 10%;
-            margin-bottom: 10%;
+            margin-top: 18%;
         }
 
         @include media(xs) {
             width: 100%;
             margin-left: 0;
-            margin-top: 10%;
-            margin-bottom: 10%;
+            margin-top: 25%;
         }
 
         @include media(xxs) {
@@ -47,6 +42,8 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        height: 684px;
+
     }
 
     &__header {
