--- a/students/rybalka_illia/exam_01/src/css/header/_header.scss
+++ b/students/rybalka_illia/exam_01/src/css/header/_header.scss
@@ -4,23 +4,18 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding: 0;
-    position: relative;
-    // width: 100dvw;
-    // height: 100dvh;
+    width: 100dvw;
+    height: 100dvh;
 
-    // @include media(md) {
-    //     height: 100dvh;
-    // }
-
-    @include media(xs) {
-        height: 70%;
+    @include media(md) {
+        height: 100dvh;
     }
 
     // .header__title
 
     &__title {
         text-align: center;
-        padding-top: 150px;
+        padding-top: 160px;
     }
 
     // .header__form
@@ -99,23 +94,10 @@
         cursor: pointer;
         position: absolute;
         right: 0.8%;
-        transition: background-color .3s ease-in-out;
-        z-index: 2;
-
-        &::before {
-            content: '';
-            position: absolute;
-            background-color: $dodgerbluedarker-color;
-            clip-path: polygon(0 0, 40% 0%, 100% 100%, 100% 100%, 0 100%);
-            width: 70px;
-            height: 100%;
-            right: 50px;
-            bottom: 0;
-            z-index: -1;
-        }
+        transition: background-color .3s;
 
         &:hover {
-            background-color: $dodgerbluedarker-color;
+            background-color: $color-azureradiance;
         }
 
         @include media(md) {
@@ -127,17 +109,12 @@
             padding: 12px 16px;
         }
 
-        @include media(xs) {}
-
         @include media(xxs) {
             padding: 12px;
             font-size: 0;
             gap: 0;
-
-            &::before {
-                display: none;
-            }
         }
+
     }
 
     // .header__svg
@@ -145,7 +122,6 @@
     &__svg {
         width: 16px;
         height: 16px;
-        z-index: 1;
 
         @include media(sm) {
             width: 16px;
@@ -155,11 +131,6 @@
         @include media(xxs) {
             width: 20px;
             height: 20px;
-
-            &:first-child {
-                position: relative;
-                left: 18%;
-            }
         }
     }
 
@@ -211,7 +182,7 @@
         @include new-font(24px, 700, normal, 28px, 2.4px);
         text-transform: uppercase;
         color: $white-color;
-        margin-left: 140px;
+        margin-left: 230px;
         margin-top: 26px;
 
         @include media(lg) {
@@ -262,5 +233,4 @@
         }
 
     }
-
 }
