--- a/students/rybalka_illia/exam_01/src/css/main/_hero-block.scss
+++ b/students/rybalka_illia/exam_01/src/css/main/_hero-block.scss
@@ -140,7 +140,7 @@
         flex-direction: column;
         justify-content: center;
         gap: 25px;
-        padding: 50px;
+        padding: 20px;
     }
 
 }
@@ -161,7 +161,7 @@
 
         &:first-child {
             margin-bottom: 15px;
-            margin-left: 15%;
+            margin-left: 45px;
 
             @include media(sm) {
                 margin-left: 0;
@@ -170,7 +170,7 @@
         }
 
         &:nth-child(2) {
-            margin-left: 28%;
+            margin-left: 120px;
 
             @include media(sm) {
                 margin-left: 20px;
@@ -234,7 +234,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 150px;
+    gap: 160px;
     margin-top: 90px;
     margin-bottom: 0;
 
