--- a/students/rybalka_illia/exam_01/src/css/main/_spain-block.scss
+++ b/students/rybalka_illia/exam_01/src/css/main/_spain-block.scss
@@ -4,6 +4,7 @@
 
     &__block {
         background-image: url(../images/spain2_bg.jpg);
+        height: 684px;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -14,16 +15,15 @@
     &__textblock {
         background: rgba(35, 35, 35, 0.90);
         width: 50%;
-        padding: 30px;
-        margin-top: 220px;
-        margin-bottom: 120px;
-        margin-left: 50%;
+        padding: 20px;
+        margin-top: 200px;
+        margin-left: 400px;
         box-sizing: border-box;
 
         @include media(md) {
             text-align: center;
-            margin-left: 25%;
-            margin-top: 10%;
+            margin-left: 24%;
+            margin-top: 14%;
         }
 
         @include media (sm) {
@@ -35,8 +35,7 @@
         @include media(xs) {
             width: 100%;
             margin-left: 0;
-            position: relative;
-            bottom: 70px;
+            margin-top: 25%;
         }
 
         @include media(xxs) {
