--- a/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
@@ -1,6 +1,7 @@
 .heroblock {
-    background-image: url('../../images/heroblock-bg.jpeg');
+    background-image: url(../../images/heroblock-bg.jpeg);
     @extend %background-positioning;
+
 
 
     &__title {
