footer_css_done_css_files_linked_to_styles_css

--- a/students/savchak_marharyta/exam_2/src/css/styles.scss
+++ b/students/savchak_marharyta/exam_2/src/css/styles.scss
@@ -3,6 +3,8 @@
 @import 'mixins';
 @import 'extend';
 @import 'reset';
+@import 'fonts';
 @import 'global';
+@import 'btn';
 @import "./header/header";
 @import "./main/main";
