--- a/students/savchak_marharyta/exam_2/src/css/styles.scss
+++ b/students/savchak_marharyta/exam_2/src/css/styles.scss
@@ -1,4 +1,12 @@
 @use 'sass:math';
+@import '../../node_modules/slick-carousel/slick/slick.scss';
+@import '../../node_modules/slick-carousel/slick/slick-theme.scss';
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/variables-dark";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import '../../node_modules/bootstrap/scss/forms';
+@import '../../node_modules/bootstrap/scss/buttons';
 @import 'variables';
 @import 'mixins';
 @import 'extend';
