--- a/students/kukuruza_maxim/exam-2/src/css/style.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/style.scss
@@ -8,3 +8,7 @@
 @import "./btn";
 @import "./header/header";
 @import "./hero/hero";
+@import "./wwd/wwd";
+@import "./lt-news/lt-news";
+@import "./gallery/gallery";
+@import "./footer/footer";
