--- a/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
@@ -1,30 +1,96 @@
 .hero {
-
-    margin: auto;
     position: relative;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    max-height: 100%;
+    background: deepskyblue;
     overflow: hidden;
 
     &-slider {
-
-        width: max-content;
+        width: 100%;
         height: 100%;
-        display: flex;
-        transition: 1s;
+        position: relative;
+
+        &__items {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            overflow: hidden;
+        }
 
         &__item {
-            max-width: 100%;
+            position: absolute;
+            width: 100%;
             height: 100%;
-            object-fit: cover;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+            transition: all .3s;
+            transform: translateY(100px);
+
+            &._active {
+                transition: .3s ease;
+                transform: translateY(0px);
+                z-index: 10;
+            }
         }
 
         // .hero-slider__img
 
-        &__img {}
+        &__img {
+            width: 100vw;
+            height: 100vh;
+        }
 
         // .hero-slider__container
 
-        &__container {}
+        &__container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
+
+    .nav-dots {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        z-index: 20;
+        width: 40px;
+    }
+
+    .nav-dot {
+        width: 10px;
+        height: 10px;
+        margin: 20px auto;
+        border-radius: 50%;
+        background: #fff;
+        cursor: pointer;
+        transition: all 300ms ease-out;
+
+        &.active {
+            background: red;
+        }
+
+    }
+
+}
+
+.bg-header {
+    background-color: $cyan-Blue;
+    opacity: 0.9;
+}
+
+
+.header-bg {
+    background: url("../../images/header-bg1.png")
 }
 
 .container {}
@@ -40,35 +106,23 @@
     &__text {}
 }
 
-.dots {
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    color: #fff;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-.dot {
-    list-style: none;
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    margin: 10px;
-    border-radius: 20px;
-    transition: 0.5s;
-}
-
-.active {
-    width: 30px;
-}
-
 .arrow {
+    &__down {
+        display: block;
+        width: 100px;
+        height: 50px;
+        position: absolute;
 
-    // .arrow__down
-
-    &__down {}
+        &:after {
+            content: "";
+            display: block;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            padding: 30px;
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            margin: 0 auto;
+        }
+    }
 }
