added maps, formValidation

--- a/students/kukuruza_maxim/exam-2/src/css/_btn.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/_btn.scss
@@ -4,6 +4,7 @@
     padding: 20px 56px;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     font-size: 16px;
     letter-spacing: 1.12px;
     line-height: 20px;
