--- a/students/kukuruza_maxim/exam-2/src/css/header/_header.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/header/_header.scss
@@ -123,6 +123,12 @@
             gap: 20px;
 
         }
+
+        @include media(xs) {
+            .menu__social {
+                display: none;
+            }
+        }
     }
 }
 
