--- a/students/kukuruza_maxim/exam-2/src/css/style.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/style.scss
@@ -11,4 +11,5 @@
 @import "./wwd/wwd";
 @import "./lt-news/lt-news";
 @import "./gallery/gallery";
+@import "./map/map";
 @import "./footer/footer";
