--- a/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
@@ -106,23 +106,62 @@
     &__text {}
 }
 
-.arrow {
-    &__down {
-        display: block;
-        width: 100px;
-        height: 50px;
-        position: absolute;
+// .arrow {
+//     &__down {
+//         display: block;
+//         width: 100px;
+//         height: 50px;
+//         background-color: unset;
+//         z-index: 10;
+//         position: relative;
 
-        &:after {
-            content: "";
-            display: block;
-            border: 1px solid #fff;
-            border-radius: 50%;
-            padding: 30px;
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            margin: 0 auto;
-        }
+//         &:after {
+//             content: ">";
+//             color: #fff;
+//             // background-image: url(../../images/arrow-down.svg);
+//             background-repeat: no-repeat;
+//             background-size: cover;
+//             display: block;
+//             border: 1px solid #fff;
+//             border-radius: 50%;
+//             padding: 30px;
+//             position: absolute;
+//             top: 190%;
+//             width: 50px;
+//             height: 50px;
+//             margin: 0 auto;
+//         }
+//     }
+// }
+.arrow__down {
+    content: '';
+    display: block;
+    border-right: 2px solid $white-color;
+    border-bottom: 2px solid $white-color;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg);
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    cursor: pointer;
+    z-index: 30;
+
+    &:hover::after {
+        background-color: $white-color;
+        opacity: .3;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        border: 1px solid $white-color;
+        border-radius: 50%;
+        padding: 30px;
+        position: absolute;
+        top: 75%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        transition: all .3s ease-in-out;
     }
 }
