--- a/students/tiselko_iryna/exam_js-module/src/css/header/_socials.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_socials.scss
@@ -25,6 +25,12 @@
     &__instagram:hover {
         stroke-width: 2px;
     }
+
+    &__facebook:focus,
+    &__twitter:focus,
+    &__instagram:focus {
+        outline: none;
+    }
 }
 
 .socials-items {
