--- a/students/tiselko_iryna/exam_js-module/src/css/styles.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/styles.scss
@@ -15,3 +15,19 @@
 @import "./main/news";
 @import "./main/gallery";
 @import "./footer/footer";
+
+
+.slick-list {
+    .slick-loading & {
+        background: #fff slick-image-url("../images/ajax-loader.gif") center center no-repeat;
+    }
+}
+
+.slick-slide{
+    @font-face {
+        font-family: "slick";
+        src: url("../css/fonts/slick.woff") format("woff"), url("../css/fonts/slick.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+    }
+}
