--- a/students/kukuruza_maxim/exam-2/src/css/style.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/style.scss
@@ -2,6 +2,7 @@
 @import "./variables";
 @import "./extend";
 @import "./mixins";
+@import './lightbox';
 @import "./fonts";
 @import "./reset";
 @import "./global";
