--- a/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/hero/_hero.scss
@@ -1,138 +1,135 @@
-.hero {
-    position: relative;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-    max-height: 100%;
-    background: deepskyblue;
-    overflow: hidden;
+.slider {
+    &__items {
+        height: 100vh;
 
-    &-slider {
-        width: 100%;
-        height: 100%;
-        position: relative;
-
-        &__items {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            display: flex;
-            overflow: hidden;
+        .slick-slide img {
+            height: 100vh;
+            width: 100vw;
+            object-fit: cover;
         }
 
-        &__item {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            margin: auto;
-            transition: all .3s;
-            transform: translateY(100px);
 
-            &._active {
-                transition: .3s ease;
-                transform: translateY(0px);
-                z-index: 10;
-            }
-        }
 
-        // .hero-slider__img
-
-        &__img {
+        .slick-slide {
             width: 100vw;
             height: 100vh;
         }
 
-        // .hero-slider__container
+        .slick-list {
+            height: 100vh;
+        }
+    }
+}
+
+.slick-vertical .slick-slide {
+    border: unset;
+}
+
+.slick-dots {
+    width: auto;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: 15;
+    transform: translateY(-50%) rotate(90deg);
+    bottom: unset;
+
+    @include media(md) {
+        display: none !important;
+    }
+
+    li button::before {
+        content: '';
+        font-size: 12px;
+        opacity: .5;
+        line-height: 13px;
+        width: 10px;
+        height: 10px;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        transition: background-color .3s ease-in-out;
+        color: unset;
+
+        &:hover {
+            background-color: $white-color;
+        }
+    }
+
+
+
+}
+
+.slick-dots li.slick-active button:before {
+    opacity: 1;
+    background-color: #fff;
+
+}
+
+.hero {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+
+    &-slider {
+
+        &__item {
+            position: relative;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &::after {
+                content: "";
+                width: 100vw;
+                height: 100vh;
+                position: absolute;
+                right: 0;
+                top: 0;
+                display: block;
+                background: linear-gradient(243deg, #7E5AFF 16.9%, #55B7FF 83.27%);
+                z-index: -19;
+            }
+
+        }
 
         &__container {
+            position: absolute;
+
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            text-align: center;
+
+        }
+
+        &._active {
+            transition: .3s ease;
+            transform: translateY(100%);
+            z-index: 10;
         }
     }
 
-    .nav-dots {
+    // .hero-slider__img
+
+    &__img {
+        height: 100%;
         position: absolute;
-        top: 50%;
-        right: 10px;
-        transform: translateY(-50%);
-        z-index: 20;
-        width: 40px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        z-index: 12;
     }
 
-    .nav-dot {
-        width: 10px;
-        height: 10px;
-        margin: 20px auto;
-        border-radius: 50%;
-        background: #fff;
-        cursor: pointer;
-        transition: all 300ms ease-out;
-
-        &.active {
-            background: red;
-        }
-
-    }
+    // .hero-slider__container
 
 }
 
-.bg-header {
-    background-color: $cyan-Blue;
-    opacity: 0.9;
-}
-
-
-.header-bg {
-    background: url("../../images/header-bg1.png")
-}
-
-.container {}
-
-.title {
-
-    // .title__heading
-
-    &__heading {}
-
-    // .title__text
-
-    &__text {}
-}
-
-// .arrow {
-//     &__down {
-//         display: block;
-//         width: 100px;
-//         height: 50px;
-//         background-color: unset;
-//         z-index: 10;
-//         position: relative;
-
-//         &:after {
-//             content: ">";
-//             color: #fff;
-//             // background-image: url(../../images/arrow-down.svg);
-//             background-repeat: no-repeat;
-//             background-size: cover;
-//             display: block;
-//             border: 1px solid #fff;
-//             border-radius: 50%;
-//             padding: 30px;
-//             position: absolute;
-//             top: 190%;
-//             width: 50px;
-//             height: 50px;
-//             margin: 0 auto;
-//         }
-//     }
-// }
 .arrow__down {
     content: '';
     display: block;
