--- a/students/kukuruza_maxim/exam-2/src/css/lt-news/_lt-news.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/lt-news/_lt-news.scss
@@ -41,6 +41,24 @@
     }
 }
 
+.frame__img {
+    height: 55%;
+
+    @include media(lg) {
+        height: 50%;
+        width: 100%;
+
+    }
+
+    @include media(md) {
+        height: 45%;
+        width: 100%;
+
+    }
+
+}
+
+
 .frame__card {
     // width: 300px !important;
     height: 500px;
@@ -49,10 +67,70 @@
     margin: 20px;
     padding: 0;
 
+    display: flex;
+    position: relative;
+
     &-text {
-        padding: 10px;
+        padding: 20px;
+        letter-spacing: 0;
+        color: #2C4058;
+
+        h3 {
+            font-weight: bold;
+            font-size: 18px;
+
+            @include media(lg) {
+                font-size: 15px;
+
+            }
+        }
+
+        p {
+            font-size: 14px;
+
+            @include media(lg) {
+                font-size: 12px;
+
+            }
+        }
     }
 }
+
+.frame__user {
+    margin-top: 20px;
+    display: flex;
+
+    gap: 20px;
+    align-items: center;
+
+    .frame__user-text {
+        p {
+            font-size: 16px;
+
+            @include media(lg) {
+                font-size: 12px;
+
+            }
+        }
+
+
+        p.user-date {
+            color: $cyan-Blue;
+
+            @include media(lg) {
+                font-size: 13px;
+
+            }
+        }
+    }
+
+    &-img {
+        border-radius: 50%;
+
+    }
+
+}
+
 
 .dot {
     width: 40px;
@@ -70,7 +148,7 @@
         outline: none;
         background: transparent;
         width: 10px;
-        height: 13px;
+        height: 12px;
         margin: 20px auto;
         border-radius: 50%;
         border: 1px solid #fff;
