--- a/students/kukuruza_maxim/exam-2/src/css/wwd/_wwd.scss
+++ b/students/kukuruza_maxim/exam-2/src/css/wwd/_wwd.scss
@@ -34,7 +34,7 @@
         left: -35%;
         z-index: -1;
 
-        @include media(md) {
+        @include media(lg) {
             content: unset;
 
         }
@@ -57,7 +57,7 @@
         right: -15%;
         z-index: -1;
 
-        @include media(md) {
+        @include media(lg) {
             content: unset;
 
         }
